--- a/gb/19/6/24/n11342010.md
+++ b/gb/19/6/24/n11342010.md
@@ -1,53 +1,53 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/dfh2/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/dfh2/1/master/t/djy/1.jpg" title="´ó¼ÍÔª"></a><a href="https://github.com/dfh2/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/dfh2/1/master/t/djy/3.jpg" title="¹ú¼ÊÐÂÎÅ"></a><a href="https://github.com/dfh2/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/dfh2/1/master/t/djy/4.jpg" title="´óÂ½ÐÂÎÅ"></a><a href="https://github.com/dfh2/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/dfh2/1/master/t/djy/5.jpg" title="ÆÀÂÛ"></a><a href="https://github.com/dfh2/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/dfh2/1/master/t/djy/6.jpg" title="ÎÄ»¯"></a><a href="https://github.com/dfh2/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/dfh2/1/master/t/djy/7.jpg" title="Éú»î"></a><a href="https://github.com/dfh2/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/dfh2/1/master/t/djy/8.jpg" title="ÓéÀÖ"></a><a href="https://github.com/dfh2/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/dfh2/1/master/t/djy/9.jpg" title="½¡¿µ"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/dfh2/1/master/t/djy/10.jpg" title="¹ºÎï"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/dfh2/1/master/t/djy/12.jpg" title="¾è¿î"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://git.io/fjCRf">ÉçÂÛ</a> | <a target="_blank" href="https://github.com/dfh2/djy/blob/master/gb/nf5657.md#1">ÈýÍË</a> | <a target="_blank" href="https://github.com/dfh2/djy/blob/master/gb/nf6123.md#1">Ëß½­</a> | <a target="_blank" href="https://github.com/dfh2/djy/blob/master/gb/nf1176117.md#1">ÖÐ¹²Âô¹ú</a> | <a target="_blank" href="https://github.com/dfh2/djy/blob/master/gb/nf5773.md#1">Ì°¸¯ÒùÂÒ | <a target="_blank" href="https://github.com/dfh2/djy/blob/master/gb/nf1176115.md#1">´Ü¸ÄÀúÊ·</a> | <a target="_blank" href="https://github.com/dfh2/djy/blob/master/gb/nf1176107.md#1">µ³¿ý»­Æ¤</a> | <a target="_blank" href="https://github.com/dfh2/djy/blob/master/gb/nf1320400.md#1">ÖÐ¹²¼äµý</a> | <a target="_blank" href="https://github.com/dfh2/djy/blob/master/gb/nf1176114.md#1">ÆÆ»µ´«Í³</a> | <a target="_blank" href="https://github.com/dfh2/djy/blob/master/gb/nf5287.md#1">¶ñ¹áÂúÓ¯</a> | <a target="_blank" href="https://github.com/dfh2/djy/blob/master/gb/ncid278.md#1">ÈËÈ¨</a> | <a target="_blank" href="https://github.com/dfh2/djy/blob/master/gb/nf1176111.md#1">ÆÈº¦</a> | <a target="_blank" href="https://github.com/dfh2/djy/blob/master/gb/nf1235328.md#1">Êé¼®</a> | <a target="_blank" href="https://github.com/dfh2/2/blob/master/README.md?zsrh#1">·­Ç½</a></p><p><a target="_blank" href="https://github.com/dfh2/djy/blob/master/gb/nf5562.md#1">Î±»ð</a> | <a target="_blank" href="https://github.com/dfh2/djy/blob/master/gb/nf4378.md#1">ÎÊ´ð</a> | <a target="_blank" href="https://github.com/dfh2/djy/blob/master/gb/nf5792.md#1">ÆÊÎö</a> | <a target="_blank" href="https://github.com/dfh2/djy/blob/master/gb/nf5735.md#1">Á½°¶±È¶Ô</a> | <a target="_blank" href="https://github.com/dfh2/djy/blob/master/gb/nf6119.md#1">¸÷¹ú°ý½±</a> | <a target="_blank" href="https://github.com/dfh2/djy/blob/master/gb/nf6120.md#1">ÃñÖÚÉùÔ®</a> | <a target="_blank" href="https://github.com/dfh2/djy/blob/master/gb/nf1188594.md#1">ÄÑÍü¼ÇÒä</a> | <a target="_blank" href="https://github.com/dfh2/djy/blob/master/gb/nf3180.md#1">º£Íâºë´«</a> | <a target="_blank" href="https://github.com/dfh2/djy/blob/master/gb/nf5410.md#1">ÍòÈËÉÏ·Ã</a> | <a target="_blank" href="https://github.com/dfh2/djy/blob/master/gb/nf5640.md#1">»ª¸®¾Û½¹</a> | <a target="_blank" href="https://github.com/dfh2/djy/blob/master/gb/nf4386.md#1">Ö§³Ö</a> | <a target="_blank" href="https://github.com/dfh2/djy/blob/master/gb/nf4389.md#1">ÕæÏà</a> | <a target="_blank" href="https://github.com/dfh2/djy/blob/master/gb/nf5790.md#1">Ê¥Ôµ</a> | <a target="_blank" href="https://github.com/dfh2/djy/blob/master/gb/nf4786.md#1">ÉñÔÏ</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>Ð¢ÁÕÓ¦Ñûµ£ÈÎÆÀÉó ×î°®Ì¨ÍåÒ¹ÊÐ¡¢³Ô»ð¹ø</h2>
-<img src="http://i.epochtimes.com/assets/uploads/2019/06/1906232355201487-600x400.jpg" />
-<h6>º«ÐÇÐ¢ÁÕÓÚ6ÔÂ23ÈÕÊÜMTVÆµµÀÖ®Ñû£¬ÔÚÌ¨±±µ£ÈÎ¡¶2019 MTVÎèÁÖÕù°Ô´óÈü¡·×Ü¾öÈüµÄÆÀÉó¡££¨ÈýÁ¢Ìá¹©£©
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/oqfyre3945/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/oqfyre3945/www/master/t/djy/1.jpg" title="å¤§çºªå…ƒé¦–é¡µ" alt="å¤§çºªå…ƒé¦–é¡µ"></a><a href="https://github.com/oqfyre3945/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/oqfyre3945/www/master/t/djy/3.jpg" title="å›½é™…æ–°é—»" alt="å›½é™…æ–°é—»"></a><a href="https://github.com/oqfyre3945/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/oqfyre3945/www/master/t/djy/4.jpg" title="å¤§é™†æ–°é—»" alt="å¤§é™†æ–°é—»"></a><a href="https://github.com/oqfyre3945/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/oqfyre3945/www/master/t/djy/5.jpg" title="å¤§çºªå…ƒè¯„è®º" alt="å¤§çºªå…ƒè¯„è®º"></a><a href="https://github.com/oqfyre3945/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/oqfyre3945/www/master/t/djy/6.jpg" title="ä¼ ç»Ÿæ–‡åŒ–" alt="ä¼ ç»Ÿæ–‡åŒ–"></a><a href="https://github.com/oqfyre3945/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/oqfyre3945/www/master/t/djy/7.jpg" title="ç”Ÿæ´»æ¶ˆè´¹" alt="ç”Ÿæ´»æ¶ˆè´¹"></a><a href="https://github.com/oqfyre3945/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/oqfyre3945/www/master/t/djy/8.jpg" title="å¨±ä¹ä¼‘é—²" alt="å¨±ä¹ä¼‘é—²"></a><a href="https://github.com/oqfyre3945/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/oqfyre3945/www/master/t/djy/9.jpg" title="å¥åº·" alt="å¥åº·"></a><a href="https://github.com/oqfyre3945/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/oqfyre3945/www/master/t/djy/10a.jpg" title="ç‹¬å®¶" alt="ç‹¬å®¶"></a><a href="https://github.com/oqfyre3945/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/oqfyre3945/www/master/t/djy/12a.jpg" title="å¤´æ¡è¦é—»" alt="å¤´æ¡è¦é—»"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/oqfyre3945/www/blob/master/README.md?zsrh#1">ç¿»å¢™</a> | <a target="_blank" href="https://github.com/oqfyre3945/djy/blob/master/gb/nf5657.md#1">ä¸‰é€€</a> | <a target="_blank" href="https://github.com/oqfyre3945/djy/blob/master/gb/nf6124.md#1">è¯‰æ±Ÿ</a> | <a target="_blank" href="https://github.com/oqfyre3945/djy/blob/master/gb/nf1176117.md#1">ä¸­å…±å–å›½</a> | <a target="_blank" href="https://github.com/oqfyre3945/djy/blob/master/gb/nf5773.md#1">è´ªè…æ·«ä¹±</a> | <a target="_blank" href="https://github.com/oqfyre3945/djy/blob/master/gb/nf1176115.md#1">çªœæ”¹åŽ†å²</a> | <a target="_blank" href="https://github.com/oqfyre3945/djy/blob/master/gb/nf1176107.md#1">å…šé­ç”»çš®</a> | <a target="_blank" href="https://github.com/oqfyre3945/djy/blob/master/gb/nf1320400.md#1">ä¸­å…±é—´è°</a> | <a target="_blank" href="https://github.com/oqfyre3945/djy/blob/master/gb/nf1176114.md#1">ç ´åä¼ ç»Ÿ</a> | <a target="_blank" href="https://github.com/oqfyre3945/ntdtv/blob/master/gb/prog447_1.md#1">æ¶è´¯æ»¡ç›ˆ</a> | <a target="_blank" href="https://github.com/oqfyre3945/djy/blob/master/gb/ncid278.md#1">äººæƒ</a> | <a target="_blank" href="https://github.com/oqfyre3945/djy/blob/master/gb/nf1176111.md#1">è¿«å®³</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">æœŸåˆŠ</a> | <a target="_blank" href="https://github.com/oqfyre3945/djy/blob/master/gb/nf5562.md#1">ä¼ªç«</a></p><p><a target="_blank" href="https://github.com/oqfyre3945/djy/blob/master/gb/9p.md#1">ç¤¾è®º</a> | <a target="_blank" href="https://github.com/oqfyre3945/djy/blob/master/gb/nf4378.md#1">é—®ç­”</a> | <a target="_blank" href="https://github.com/oqfyre3945/djy/blob/master/gb/nf5792.md#1">å‰–æž</a> | <a target="_blank" href="https://github.com/oqfyre3945/djy/blob/master/gb/nf5735.md#1">ä¸¤å²¸æ¯”å¯¹</a> | <a target="_blank" href="https://github.com/oqfyre3945/djy/blob/master/gb/nf6119.md#1">å„å›½è¤’å¥–</a> | <a target="_blank" href="https://github.com/oqfyre3945/djy/blob/master/gb/nf6120.md#1">æ°‘ä¼—å£°æ´</a> | <a target="_blank" href="https://github.com/oqfyre3945/djy/blob/master/gb/nf1188594.md#1">éš¾å¿˜è®°å¿†</a> | <a target="_blank" href="https://github.com/oqfyre3945/djy/blob/master/gb/nf3180.md#1">æµ·å¤–å¼˜ä¼ </a> | <a target="_blank" href="https://github.com/oqfyre3945/djy/blob/master/gb/nf5410.md#1">ä¸‡äººä¸Šè®¿</a> | <a target="_blank" href="https://github.com/oqfyre3945/www/blob/master/README.md?zsrh#1">å¹³å°é¦–é¡µ</a> | <a target="_blank" href="https://github.com/oqfyre3945/djy/blob/master/gb/nf4386.md#1">æ”¯æŒ</a> | <a target="_blank" href="https://github.com/oqfyre3945/djy/blob/master/gb/nf4389.md#1">çœŸç›¸</a> | <a target="_blank" href="https://github.com/oqfyre3945/djy/blob/master/gb/nf5790.md#1">åœ£ç¼˜</a> | <a target="_blank" href="https://github.com/oqfyre3945/djy/blob/master/gb/nf4786.md#1">ç¥žéŸµ</a></td></tr>
+<tr><td VALIGN=TOP width="626"><h2 align=center>å­ç³åº”é‚€æ‹…ä»»è¯„å®¡ æœ€çˆ±å°æ¹¾å¤œå¸‚ã€åƒç«é”…</h2>
+<img width="600" src="https://i.epochtimes.com/assets/uploads/2019/06/1906232355201487-600x400.jpg" />
+<h6>éŸ©æ˜Ÿå­ç³äºŽ6æœˆ23æ—¥å—MTVé¢‘é“ä¹‹é‚€ï¼Œåœ¨å°åŒ—æ‹…ä»»ã€Š2019 MTVèˆžæž—äº‰éœ¸å¤§èµ›ã€‹æ€»å†³èµ›çš„è¯„å®¡ã€‚ï¼ˆä¸‰ç«‹æä¾›ï¼‰
 </h6>
 <hr>
-<p>¡¾´ó¼ÍÔª2019Äê06ÔÂ24ÈÕÑ¶¡¿º«ÐÇ<a href="https://github.com/dfh2/djy/blob/master/gb/tag/%E5%AD%9D%E7%90%B3.md">Ð¢ÁÕ</a>½üÈÕÊÜMTVÆµµÀÖ®Ñû£¬µ£ÈÎ23ÈÕ¾ÙÐÐµÄ¡¶2019 MTV<a href="https://github.com/dfh2/djy/blob/master/gb/tag/%E8%88%9E%E6%9E%97%E4%BA%89%E9%9C%B8%E5%A4%A7%E8%B5%9B.md">ÎèÁÖÕù°Ô´óÈü</a>¡·×Ü¾öÈüµÄÆÀÉó£¬¸Ã»î¶¯ÊÇMTVÍÆ³öÈ«ÐÂÆó»®£¬ÓÉÀÖÌìÃâË°µê£¨LOTTE DUTY FREE£©ÔÞÖú»î¶¯£¬ÔÚ¾­¹ý¸ßÐÛÓëÌ¨±±Á½µØ¸´Ñ¡ºó£¬ÕýÊ½½øÈë×Ü¾öÈü¡£</p>
-<p>´Ë´Î£¬×Ü¾öÈüÆÀÉóÍÅ£¬°üÀ¨Ì¨Íå³ªÌø¸èÊÖ<a href="https://github.com/dfh2/djy/blob/master/gb/tag/%E6%81%BA%E4%B9%90.md">âýÀÖ</a>£¬»¹ÓÐÅ·ÃÀÒÕÈËÖ¸ÃûºÏ×÷Îèµ¸ÀÏÊ¦Nicole Kirkland¡¢ÑÇÖÞ´ïÈËÐãStreet Jazz½ÌÖ÷ºÚÃÃ£¬ÒÔ¼°ÓÐ¡°º«¹ú±Ì°ºË¿¡±Ö®³ÆµÄÌú·Î¸è¼§<a href="https://github.com/dfh2/djy/blob/master/gb/tag/%E5%AD%9D%E7%90%B3.md">Ð¢ÁÕ</a>¡£</p>
-<p>Ð¢ÁÕÔÚ±ÈÈüÇ°»¹ÌØ±ð¾Ù°ìPHOTOCALLÃ½Ìå¼ûÃæ»á£¬Ëý±íÊ¾ÄÜÊÜÑûµ£ÈÎ¡¶2019 MTV<a href="https://github.com/dfh2/djy/blob/master/gb/tag/%E8%88%9E%E6%9E%97%E4%BA%89%E9%9C%B8%E5%A4%A7%E8%B5%9B.md">ÎèÁÖÕù°Ô´óÈü</a>¡·ÆÀÉóÖ®Ò»ÊµÔÚºÜÈÙÐÒ£¬×Ô¼ºÒ²ÊÇ²Î¼ÓÕ÷Ñ¡±ÈÈü¶ø³öµÀµÄ£¬·Ç³£ÄÜÌå»á²ÎÈüÕßÕ¾ÉÏÎèÌ¨±íÑÝµÄÄÇ·Ý½ôÕÅÐÄÇé£¬Í¬Ê±Ëý·ÖÏí²ÎÈüÐ¡¼¼ÇÉ£¬¾ÍÊÇ¡°Òª°Ñ×Ô¼º×îÈÏÕæµÄÒ»ÃæÄÃ³öÀ´£¬²¢ÇÒÓÃ100%µÄÐÅÐÄ±íÑÝ¸ø´ó¼Ò¿´¡±¡£</p>
-<figure id="attachment_11342042" style="width: 453px" class="wp-caption aligncenter"><a href="http://i.epochtimes.com/assets/uploads/2019/06/1906232355231487.jpg"><img class=" wp-image-11342042" title="" src="http://i.epochtimes.com/assets/uploads/2019/06/1906232355231487.jpg" alt="" width="453" b="680" /></a><figcaption class="wp-caption-text">Ð¢ÁÕÔÚÌ¨±±Ã½Ìå¼ûÃæ»áÉÏÌØ±ðÇå³ªÒ»¶Î×îÐÂ¸èÇú¡££¨ÈýÁ¢Ìá¹©£©</figcaption></figure>
-<p>ÓÉÓÚÐ¢ÁÕ²»½öÉÃ³¤Îèµ¸£¬±¾ÉíÒ²ÊÇ¸èÊÖ£¬Ò²Òò´ËËýÔÚÃ½Ìå¼ûÃæ»áÉÏ»¹ÌØ±ðÇå³ªÒ»¶Î×îÐÂ¸èÇú£¬Ò»Õ¹³ª¹¦¡£ÆäÊµ£¬Ð¢ÁÕ22ÈÕÒ²ÔÚÌ¨±±¾Ù°ìÑÝ³ª»á£¬¾¡¹ÜÐÐ³ÌÂúµµ£¬ÑÝ³ª»áÖ®ºóÒÀÈ»³é¿Õ¹äµ½ÆÚ´ýÒÔ¾ÃµÄÌ¨ÍåÒ¹ÊÐ£¬²¢Æ·³¢µ½ÃÀÎ¶»ð¹øºó£¬ÈÃËýÈÌ²»×¡ÓÖÔÙ´Îº°»°£¬Ï£ÍûÏÂÒ»´Î·ÃÌ¨ÄÜ¶à¹ä¹ä£¬°ÑÌ¨ÍåÃÀÊ³Ò»´Î³Ô¸ö¹»¡£</p>
-<figure id="attachment_11342043" style="width: 451px" class="wp-caption aligncenter"><a href="http://i.epochtimes.com/assets/uploads/2019/06/1906232355281487.jpg"><img class=" wp-image-11342043" title="" src="http://i.epochtimes.com/assets/uploads/2019/06/1906232355281487.jpg" alt="" width="451" b="677" /></a><figcaption class="wp-caption-text">Ð¢ÁÕÓÚ6ÔÂ23ÈÕÊÜMTVÆµµÀÖ®Ñû£¬ÔÚÌ¨±±µ£ÈÎ¡¶2019 MTVÎèÁÖÕù°Ô´óÈü¡·×Ü¾öÈüµÄÆÀÉó¡££¨ÈýÁ¢Ìá¹©£©</figcaption></figure>
-<p>¡¶2019MTVÎèÁÖÕù°Ô´óÈü¡·µÄ±ÈÈü£¬½«·ÖÁ½´Î7ÔÂ6ÈÕÍíÉÏ18:00¼°7ÈÕÍíÉÏ18:00ÓÚMTVÆµµÀ²¥³ö¡£</p>
-<p>ÔðÈÎ±à¼­£ºÁºÃÎÖñ</p>
+	<p>ã€å¤§çºªå…ƒ2019å¹´06æœˆ24æ—¥è®¯ã€‘éŸ©æ˜Ÿ<ahref="https://github.com/oqfyre3945/djy/blob/master/gb/tag/%E5%AD%9D%E7%90%B3.md#1">å­ç³</a>è¿‘æ—¥å—MTVé¢‘é“ä¹‹é‚€ï¼Œæ‹…ä»»23æ—¥ä¸¾è¡Œçš„ã€Š2019 MTV<ahref="https://github.com/oqfyre3945/djy/blob/master/gb/tag/%E8%88%9E%E6%9E%97%E4%BA%89%E9%9C%B8%E5%A4%A7%E8%B5%9B.md#1">èˆžæž—äº‰éœ¸å¤§èµ›</a>ã€‹æ€»å†³èµ›çš„è¯„å®¡ï¼Œè¯¥æ´»åŠ¨æ˜¯MTVæŽ¨å‡ºå…¨æ–°ä¼åˆ’ï¼Œç”±ä¹å¤©å…ç¨Žåº—ï¼ˆLOTTE DUTY FREEï¼‰èµžåŠ©æ´»åŠ¨ï¼Œåœ¨ç»è¿‡é«˜é›„ä¸Žå°åŒ—ä¸¤åœ°å¤é€‰åŽï¼Œæ­£å¼è¿›å…¥æ€»å†³èµ›ã€‚</p>
+<p>æ­¤æ¬¡ï¼Œæ€»å†³èµ›è¯„å®¡å›¢ï¼ŒåŒ…æ‹¬å°æ¹¾å”±è·³æ­Œæ‰‹<ahref="https://github.com/oqfyre3945/djy/blob/master/gb/tag/%E6%81%BA%E4%B9%90.md#1">æºä¹</a>ï¼Œè¿˜æœ‰æ¬§ç¾Žè‰ºäººæŒ‡ååˆä½œèˆžè¹ˆè€å¸ˆNicole Kirklandã€äºšæ´²è¾¾äººç§€Street Jazzæ•™ä¸»é»‘å¦¹ï¼Œä»¥åŠæœ‰â€œéŸ©å›½ç¢§æ˜‚ä¸â€ä¹‹ç§°çš„é“è‚ºæ­Œå§¬<ahref="https://github.com/oqfyre3945/djy/blob/master/gb/tag/%E5%AD%9D%E7%90%B3.md#1">å­ç³</a>ã€‚</p>
+<p>å­ç³åœ¨æ¯”èµ›å‰è¿˜ç‰¹åˆ«ä¸¾åŠžPHOTOCALLåª’ä½“è§é¢ä¼šï¼Œå¥¹è¡¨ç¤ºèƒ½å—é‚€æ‹…ä»»ã€Š2019 MTV<ahref="https://github.com/oqfyre3945/djy/blob/master/gb/tag/%E8%88%9E%E6%9E%97%E4%BA%89%E9%9C%B8%E5%A4%A7%E8%B5%9B.md#1">èˆžæž—äº‰éœ¸å¤§èµ›</a>ã€‹è¯„å®¡ä¹‹ä¸€å®žåœ¨å¾ˆè£å¹¸ï¼Œè‡ªå·±ä¹Ÿæ˜¯å‚åŠ å¾é€‰æ¯”èµ›è€Œå‡ºé“çš„ï¼Œéžå¸¸èƒ½ä½“ä¼šå‚èµ›è€…ç«™ä¸Šèˆžå°è¡¨æ¼”çš„é‚£ä»½ç´§å¼ å¿ƒæƒ…ï¼ŒåŒæ—¶å¥¹åˆ†äº«å‚èµ›å°æŠ€å·§ï¼Œå°±æ˜¯â€œè¦æŠŠè‡ªå·±æœ€è®¤çœŸçš„ä¸€é¢æ‹¿å‡ºæ¥ï¼Œå¹¶ä¸”ç”¨100%çš„ä¿¡å¿ƒè¡¨æ¼”ç»™å¤§å®¶çœ‹â€ã€‚</p>
+<figure id="attachment_11342042" aria-describedby="caption-attachment-11342042" style="width: 453px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2019/06/1906232355231487.jpg"><img class=" wp-image-11342042" title="" src="https://i.epochtimes.com/assets/uploads/2019/06/1906232355231487.jpg" alt="" width="453" b="680" /></a><figcaption id="caption-attachment-11342042" class="wp-caption-text">å­ç³åœ¨å°åŒ—åª’ä½“è§é¢ä¼šä¸Šç‰¹åˆ«æ¸…å”±ä¸€æ®µæœ€æ–°æ­Œæ›²ã€‚ï¼ˆä¸‰ç«‹æä¾›ï¼‰</figcaption></figure>
+<p>ç”±äºŽå­ç³ä¸ä»…æ“…é•¿èˆžè¹ˆï¼Œæœ¬èº«ä¹Ÿæ˜¯æ­Œæ‰‹ï¼Œä¹Ÿå› æ­¤å¥¹åœ¨åª’ä½“è§é¢ä¼šä¸Šè¿˜ç‰¹åˆ«æ¸…å”±ä¸€æ®µæœ€æ–°æ­Œæ›²ï¼Œä¸€å±•å”±åŠŸã€‚å…¶å®žï¼Œå­ç³22æ—¥ä¹Ÿåœ¨å°åŒ—ä¸¾åŠžæ¼”å”±ä¼šï¼Œå°½ç®¡è¡Œç¨‹æ»¡æ¡£ï¼Œæ¼”å”±ä¼šä¹‹åŽä¾ç„¶æŠ½ç©ºé€›åˆ°æœŸå¾…ä»¥ä¹…çš„å°æ¹¾å¤œå¸‚ï¼Œå¹¶å“å°åˆ°ç¾Žå‘³ç«é”…åŽï¼Œè®©å¥¹å¿ä¸ä½åˆå†æ¬¡å–Šè¯ï¼Œå¸Œæœ›ä¸‹ä¸€æ¬¡è®¿å°èƒ½å¤šé€›é€›ï¼ŒæŠŠå°æ¹¾ç¾Žé£Ÿä¸€æ¬¡åƒä¸ªå¤Ÿã€‚</p>
+<figure id="attachment_11342043" aria-describedby="caption-attachment-11342043" style="width: 451px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2019/06/1906232355281487.jpg"><img class=" wp-image-11342043" title="" src="https://i.epochtimes.com/assets/uploads/2019/06/1906232355281487.jpg" alt="" width="451" b="677" /></a><figcaption id="caption-attachment-11342043" class="wp-caption-text">å­ç³äºŽ6æœˆ23æ—¥å—MTVé¢‘é“ä¹‹é‚€ï¼Œåœ¨å°åŒ—æ‹…ä»»ã€Š2019 MTVèˆžæž—äº‰éœ¸å¤§èµ›ã€‹æ€»å†³èµ›çš„è¯„å®¡ã€‚ï¼ˆä¸‰ç«‹æä¾›ï¼‰</figcaption></figure>
+<p>ã€Š2019MTVèˆžæž—äº‰éœ¸å¤§èµ›ã€‹çš„æ¯”èµ›ï¼Œå°†åˆ†ä¸¤æ¬¡7æœˆ6æ—¥æ™šä¸Š18:00åŠ7æ—¥æ™šä¸Š18:00äºŽMTVé¢‘é“æ’­å‡ºã€‚</p>
+<p>è´£ä»»ç¼–è¾‘ï¼šæ¢æ¢¦ç«¹</p>
+	
 <hr>
 
-#### ±¾ÎÄ×ª×Ô<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>£¨¹úÄÚÐèÓÃ<a href="https://git.io/fjmgJ">·­Ç½Èí¼þ</a>²ÅÄÜ·ÃÎÊ£©
-> Ô­ÎÄ£º<a href="http://www.epochtimes.com/gb/19/6/24/n11342010.htm">Ð¢ÁÕÓ¦Ñûµ£ÈÎÆÀÉó ×î°®Ì¨ÍåÒ¹ÊÐ¡¢³Ô»ð¹ø</a>
-#### ÏÂÔØ<a href="https://git.io/fjmgJ">·­Ç½Èí¼þ</a>ä¯ÀÀ<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>Ïà¹ØÐÂÎÅ£º
-> <li><a href="http://www.epochtimes.com/gb/19/5/10/n11248401.htm">ÆÚ´ýÓëÐ¢ÁÕÍ¬Ì¨ âýÀÖ£ºÎÒÒª»¯8Ð¡Ê±µÄ×±£¡</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/4/2/n11158028.htm">Ð¢ÁÕ6ÔÂ22ÈÕÓÚÌ¨±±¿ª³ª ÃÅÆ±4ÔÂ27ÈÕ¿ªÂô</a></li>
-> <li><a href="http://www.epochtimes.com/gb/18/8/30/n10677360.htm">GARYÎª¼ûÌ¨Íå·ÛË¿¼õ·Ê ½«ÓëÐ¢ÁÕ·ÃÌ¨¶«³ªÐÂ¸è</a></li>
-> <li><a href="http://www.epochtimes.com/gb/18/8/7/n10621404.htm">¡°°®ÓëÇà´ºµÄÓ¡¼Ç¡±º«Á÷Ó°Õ¹µÚ¶þ¼¾5²¿Æ¬½éÉÜ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/18/7/25/n10589523.htm">º«ÐÇÐ¢ÁÕ½«¸°Ì¨¿ª³ª GARYÖÐÎÄÕÐºô³¬ÓÐ³ÏÒâ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/18/3/12/n10210501.htm">¡°BIGBANG¡±Ì«Ñô½ñÈëÎé Ïò·ÛË¿ÐÐ´óÀñÖÂÒâ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/18/2/3/n10111586.htm">BIGBANGÌ«ÑôÓëãÉÐ¢ÁÕÍê»é ÖÚÐÇËÍ×£¸£</a></li>
-> <li><a href="http://www.epochtimes.com/gb/18/1/30/n10099897.htm">Ì«ÑôãÉÐ¢ÁÕ»éÀñµ¹Êý »éÉ´ÕÕ×ê½äÆØ¹â¡¡</a></li>
 
-#### ÏÂÔØ<a href="https://git.io/fjmgJ">·­Ç½Èí¼þ</a>ä¯ÀÀ<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>ÈÈÃÅÐÂÎÅ£º
-> <li><a href="http://www.epochtimes.com/gb/19/6/22/n11339838.htm">¡¾Ö±²¥¡¿¾Ü¾øºìÉ«Ã½Ìå 623¿­µÀ¼¯»á</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/23/n11340646.htm">¡¾·­Ç½±Ø¿´¡¿¹ã¶«±¬·¢´ó¹æÄ£ÈºÌåÎ¬È¨ÊÂ¼þ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/22/n11340452.htm">°ÙÍò¸ÛÈË·´ËÍÖÐ ´¥¶¯ÖÐ¹²×îÍ´Éñ¾­ ·âÉ±¿ÕÇ°</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/23/n11341325.htm">»îÕªÆ÷¹ÙÄÑÖÃÐÅ£¿ ÓöÂÞÎÄ£º¸ç¸çÑÛ½ÇÄ¤±»Õª</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/4/8/n11171684.htm">¡¾ÏÍºó´«¡¿Ê·ÉÏÃüÔË×îÀëÆæµÄÒ»Î»»Êºó</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/7/n11307310.htm">ÃüÖÐÓÐ²ÆÓëÎÞ²Æ£¨ÖÐ£©£ºÕæÄÜËã³öÀ´£¡</a></li>
-> <li><a href="http://www.epochtimes.com/gb/15/5/19/n4437697.htm">È¨ºâÇáÖØ ¹Å´úÊ®ÁùÁ½Ò»½ï´óÓÐÑ§ÎÊ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/15/n11324574.htm">¡¾ÖÐ»ªÉÌµÀ¡¿ÒÔÐÅÒå¾­ÉÌÖÎ¼ÒµÄ½úÉÌÇÇÖÂÓ¹</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/21/n11338566.htm">¡¶¹ÂÐÇÀá¡·ÃûÇú±ä·´ËÍÖÐ¸è ´Ê×÷ÕßÔÞ¸ÛÈËÓÂ¸Ò</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/21/n11339067.htm">³ÂÇÇ¶÷ÊÕÄäÃû»­×÷ ³ÂåûÏ£3¸öÔÂºó³ÐÈÏÍüÊðÃû</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/21/n11339076.htm">ÕÔÓÖÍ¢¸ßÔ²Ô²Å®¶ùÂúÔÂ ÆØ¹âµÄÓ¢ÎÄÃûÒâº­³¬Å¯</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/21/n11338547.htm">ÕÉ·ò¾Û»á´øÆÞÅã ÀµÁÕ¶÷ÐÅÈÎ»éÒö</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/23/n11341454.htm">ÑÝ³ª»áÉùÔ®·´ËÍÖÐ ÂÞ´óÓÓ¸èÇúÔâÖÐ¹²·âÉ±</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/19/n11333511.htm">¡¾ÐÂÎÅ¿´µã¡¿´¨Ï°Í¨»°ËµÉ¶ G20Ì¸ÅÐÇ°¾°ÄÑÁÏ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/22/n11340360.htm">¡¾ÐÂÎÅ¿´µã¡¿Ï°½ð¸ßµ÷»áÎî ÁªÊÖ¿¹ÃÀ¿Ö×ÔÉË£¿</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/18/n11330846.htm">¡¾ÐÂÎÅ¿´µã¡¿ÁÖÖ£ºóÍË±±¾©´ì°Ü ·´ËÍÖÐ¸Õ¿ªÊ¼</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/22/n11340267.htm">¸ÛÈË·´ËÍÖÐÖ®¼Ê ¹ã¶«½ÓÁ¬±¬·¢Á½Æð´óÓÎÐÐ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/21/n11338786.htm">·ÖÎö£º´¨ÆÕ²»¶ÔÒÁÀÊ¶¯Îä¼´¿ÉÈ¡Ê¤</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/22/n11340314.htm">ºþÄÏ²Ù³¡ÂñÊ¬°¸ ÑÚ¸Ç16Äêºó±³ºóÊÆÁ¦¸¡ÏÖ</a></li>
+<strong>ç›¸å…³æ–°é—»ï¼š</strong>
+<li><a href="https://github.com/oqfyre3945/djy/blob/master/gb/18/1/30/n10099897.md#1">å¤ªé˜³é—µå­ç³å©šç¤¼å€’æ•° å©šçº±ç…§é’»æˆ’æ›å…‰ã€€</a></li>
+<li><a href="https://github.com/oqfyre3945/djy/blob/master/gb/18/2/3/n10111586.md#1">BIGBANGå¤ªé˜³ä¸Žé—µå­ç³å®Œå©š ä¼—æ˜Ÿé€ç¥ç¦</a></li>
+<li><a href="https://github.com/oqfyre3945/djy/blob/master/gb/18/3/12/n10210501.md#1">â€œBIGBANGâ€å¤ªé˜³ä»Šå…¥ä¼ å‘ç²‰ä¸è¡Œå¤§ç¤¼è‡´æ„</a></li>
+<li><a href="https://github.com/oqfyre3945/djy/blob/master/gb/18/7/25/n10589523.md#1">éŸ©æ˜Ÿå­ç³å°†èµ´å°å¼€å”± GARYä¸­æ–‡æ‹›å‘¼è¶…æœ‰è¯šæ„</a></li>
 <hr>
 
-#### ÊÖ»úÉÏ³¤°´²¢¸´ÖÆÏÂÃæ¶þÎ¬Âë·ÖÏí±¾ÎÄÕÂ£º<br><br><img src="http://www.hehaibao.com/qr/index.php?m=1&e=L&p=6&t=&d=https://github.com/dfh2/djy/blob/master/gb/19/6/24/n11342010.md%231" title="·ÖÏí±¾ÎÄÕÂ"></td><td VALIGN=TOP><a href="https://github.com/dfh2/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh2/djy/master/gb/300/wei-f1.jpg" title="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"  alt="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"></a><br><a href="https://github.com/dfh2/yh/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh2/djy/master/gb/300/yong-h.jpg" title="ÓÀºãµÄ¼ûÖ¤"  alt="ÓÀºãµÄ¼ûÖ¤"></a><br><a href="https://github.com/dfh2/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh2/djy/master/gb/300/shang-lnz.jpg" title="ÉÆÁ¼Å®×Ó±»ÖÐ¹²Í¶ÄÐÀÎ"  alt="ÉÆÁ¼Å®×Ó±»ÖÐ¹²Í¶ÄÐÀÎ"></a><br><a href="https://github.com/dfh2/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh2/djy/master/gb/300/huo-z3.jpg" title="¾¯ÎÀÄ¿»÷»îÕªÆ÷¹Ù"  alt="¾¯ÎÀÄ¿»÷»îÕªÆ÷¹Ù"></a><br><a href="https://github.com/dfh2/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh2/djy/master/gb/300/huo-z4.jpg" title="Ö¤ÈËÃèÊö»îÕª¿Ö²À"  alt="Ö¤ÈËÃèÊö»îÕª¿Ö²À"></a><br><a href="https://github.com/dfh2/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh2/djy/master/gb/300/huo-z1.jpg" title="½Ò¿ª»îÕªÆ÷¹ÙºÚÄ»"  alt="½Ò¿ª»îÕªÆ÷¹ÙºÚÄ»"></a><br><a href="https://github.com/dfh2/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh2/djy/master/gb/300/ma-ks.jpg" title="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·"  alt="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·"></a><br><a href="https://github.com/dfh2/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh2/djy/master/gb/300/chang-zs.jpg" title="²Ø×ÖÊ¯ ÔÌÌì»ú"  alt="²Ø×ÖÊ¯ ÔÌÌì»ú"></a><br><a href="https://github.com/dfh2/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh2/djy/master/gb/300/st1.jpg" title="¹Ø×¢3ÒÚÈËÈýÍË"  alt="¹Ø×¢3ÒÚÈËÈýÍË"></a><br><a href="https://github.com/dfh2/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh2/djy/master/gb/300/jie-t.jpg" title="½âÌåÖÐ¹²¸´ÐËÖÐ»ª"  alt="½âÌåÖÐ¹²¸´ÐËÖÐ»ª"></a><br><a href="https://github.com/dfh2/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh2/djy/master/gb/300/gao-zs.jpg" title="ÖÐ¹²ÆÈº¦Á¼ÐÄÂÉÊ¦"  alt="ÖÐ¹²ÆÈº¦Á¼ÐÄÂÉÊ¦"></a><br><a href="https://github.com/dfh2/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh2/djy/master/gb/300/sj1.jpg" title="303ÍòÈË¾Ù±¨½­ÔóÃñ"  alt="303ÍòÈË¾Ù±¨½­ÔóÃñ"></a><br><a href="https://github.com/dfh2/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh2/djy/master/gb/300/sj2.jpg" title="ÕâÐ©¹ÙÔ±ÎªºÎÆðËß½­ÔóÃñ"  alt="ÕâÐ©¹ÙÔ±ÎªºÎÆðËß½­ÔóÃñ"></a><br><a href="https://github.com/dfh2/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh2/djy/master/gb/300/liangan.jpg" title="º£Ï¿Á½°¶µÄÇ¿ÁÒ¶Ô±È"  alt="º£Ï¿Á½°¶µÄÇ¿ÁÒ¶Ô±È"></a><br><a href="https://github.com/dfh2/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh2/djy/master/gb/300/jia-ndzl.jpg" title="¼ÓÄÃ´ó×ÜÀíµÄºØÐÅ"  alt="¼ÓÄÃ´ó×ÜÀíµÄºØÐÅ"></a><br><a href="https://github.com/dfh2/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh2/djy/master/gb/300/xiao-wd.jpg" title="Ì½Ñ°ÕæÏà¼æÌýÔòÃ÷"  alt="Ì½Ñ°ÕæÏà¼æÌýÔòÃ÷"></a><br><a href="https://github.com/dfh2/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh2/djy/master/gb/300/yindu.jpg" title="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½"  alt="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½"></a><br><a href="https://github.com/dfh2/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh2/djy/master/gb/300/xie-j.jpg" title="²»Ò»ÑùµÄº£ÍâÐ£Ô°"  alt="²»Ò»ÑùµÄº£ÍâÐ£Ô°"></a><br><a href="https://github.com/dfh2/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh2/djy/master/gb/300/li-up.jpg" title="´Ó´óÊ¦µ½Í½µÜµÄ´«Ææ"  alt="´Ó´óÊ¦µ½Í½µÜµÄ´«Ææ"></a><br><a href="https://github.com/dfh2/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh2/djy/master/gb/300/zfl2.jpg" title="ÒÚÍòÈËÓë¶«·½Ò»±¾ÆæÊé"  alt="ÒÚÍòÈËÓë¶«·½Ò»±¾ÆæÊé"></a><br><a href="https://github.com/dfh2/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh2/djy/master/gb/300/zhen-h.jpg" title="´óÂ½¼û²»µ½µÄÕðº³³¡Ãæ"  alt="´óÂ½¼û²»µ½µÄÕðº³³¡Ãæ"></a><br><a href="https://github.com/dfh2/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh2/djy/master/gb/300/dalu-sk.jpg" title="ÈËÐÄÏòÉÆ ´óÂ½µ±³õÊ¢¿ö"  alt="ÈËÐÄÏòÉÆ ´óÂ½µ±³õÊ¢¿ö"></a><br><a href="https://github.com/dfh2/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh2/djy/master/gb/300/zfl1.jpg" title="×·Ñ°ÕæÀí ÕâÊé½²Ê²Ã´"  alt="×·Ñ°ÕæÀí ÕâÊé½²Ê²Ã´"></a><br><a href="https://github.com/dfh2/2/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh2/djy/master/gb/300/fq1.jpg" title="ÏÂÔØÃâ·Ñ·­Ç½Èí¼þ"  alt="ÏÂÔØÃâ·Ñ·­Ç½Èí¼þ"></a><br></td></tr></table>
+
+<strong>ç¼–è¾‘æŽ¨èï¼š</strong>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank">å…³æ³¨3äº¿äººä¸‰é€€</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/12/6/n10894661.md#1" target="_blank">æž—å‚²éœœï¼šä¸ºäº†æ´»å‘½çš„å†’é™©â€”â€”çž’äº§ç§åˆ†</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/5/n10830342.md#1" target="_blank">èµ°å‡ºç£¨éš¾ è´¹åŸŽå¥³åŒ»ç”Ÿæ‰¾åˆ°çœŸæ­£çš„è‡ªæˆ‘</a></li>
+<hr>
+
+<strong>çƒ­é—¨æ–°é—»ï¼š</strong>
+<li><a href="https://github.com/oqfyre3945/djy/blob/master/gb/20/3/23/n11967780.md#1">ã€æ–°é—»çœ‹ç‚¹ã€‘å·ä¹ å¯¹è¯è¯´å•¥ çº¢äºŒä»£å€’æˆˆä¹ å±æ€¥ï¼Ÿ</a></li>
+<li><a href="https://github.com/oqfyre3945/djy/blob/master/gb/20/3/24/n11968465.md#1">ã€æ‹æ¡ˆæƒŠå¥‡ã€‘ä¹ è¿‘å¹³æœ‰é™©ï¼Ÿä¸‰å³¡å¤§åè¢«çˆ†å±æœº</a></li>
+<li><a href="https://github.com/oqfyre3945/djy/blob/master/gb/20/3/23/n11968139.md#1">é©¬åˆ—æ•™æŽˆåƒé‡Œæ•£æ¯’ï¼Ÿæ„é¦–ä¾‹ç¡®è¯Šç—…ä¾‹èº«ä»½æ›å…‰</a></li>
+<li><a href="https://github.com/oqfyre3945/djy/blob/master/gb/20/3/23/n11965551.md#1">åˆ†æžï¼šå¤§ç–«ä¹‹ä¸‹ä¸­å›½ä¸¤åƒä¸‡æ‰‹æœºç”¨æˆ·æ¶ˆå¤±</a></li>
+<li><a href="https://github.com/oqfyre3945/djy/blob/master/gb/20/3/23/n11964881.md#1">æ­¦æ±‰ç—…ä¾‹æ¸…é›¶å†…å¹•è¢«æ›å…‰ åŒ—äº¬é€šçŸ¥éœ²ç«¯å€ª</a></li>
+<li><a href="https://github.com/oqfyre3945/djy/blob/master/gb/20/3/23/n11965271.md#1">åˆ˜çœŸæƒŠä¼ ç—…é€ ç•™ä¸‹4å²å¥³å„¿ äº«å¹´44å²ã€€</a></li>
+<li><a href="https://github.com/oqfyre3945/djy/blob/master/gb/20/3/22/n11963031.md#1">èƒžå¼Ÿæˆä¸ºå°æ¹¾å¥³å©¿ ç‘žèŽŽæ›å©šç¤¼ç…§å–Šå¼€å¿ƒ</a></li>
+<li><a href="https://github.com/oqfyre3945/djy/blob/master/gb/20/3/23/n11966011.md#1">åˆ˜çœŸ44å²è¾žä¸– æ¼”è‰ºåœˆå¥½å‹ä¸èˆ</a></li>
+<li><a href="https://github.com/oqfyre3945/djy/blob/master/gb/20/3/22/n11964501.md#1">æ¹–åŒ—ç—…ä¾‹é›¶å¢žé•¿ï¼Ÿå°æ¹¾ç½‘çº¢:ä¸­å…±è°Žè¨€å®³æƒ¨ä¸–ç•Œ</a></li>
+<li><a href="https://github.com/oqfyre3945/djy/blob/master/gb/20/3/21/n11962008.md#1">å¥½èŽ±åžåˆ¶ä½œäººç“¦ç‰¹æŸ“ç–«ï¼šèº«ä½“åƒè¢«å·´å£«æ’žåˆ°</a></li>
+<li><a href="https://github.com/oqfyre3945/djy/blob/master/gb/20/3/11/n11933384.md#1">æ–­è‡‚åƒ§è½¬ä¸–ï¼Ÿå°è›®ç«¥æœ‰èƒ† å‘åº·ç†™å¸è¦å®˜èŒ</a></li>
+<li><a href="https://github.com/oqfyre3945/djy/blob/master/gb/20/3/22/n11964127.md#1">åŽæ‚”æˆ–æ˜¯ä¸€å‘³è‰¯è¯ ä½†é¡»åœ¨å¤§é™å‰</a></li>
+<li><a href="https://github.com/oqfyre3945/djy/blob/master/gb/20/3/17/n11945807.md#1">2020 å¦æžæ³°æ¥</a></li>
+<li><a href="https://github.com/oqfyre3945/djy/blob/master/gb/20/3/21/n11961878.md#1">ã€åŽ†å²å›žçœ¸ã€‘äººä»¬å¿˜è®°ç¥ž è¿™å°±æ˜¯ä¸€åˆ‡çš„èµ·å› </a></li>
+<li><a href="https://github.com/oqfyre3945/djy/blob/master/gb/20/2/27/n11900217.md#1">ã€åŽ†å²ä¸Šçš„ç˜Ÿç–«ã€‘â€œä¸Šå¸ä¹‹éž­â€ï¼šæ¬§æ´²é»‘æ­»ç—…</a></li>
+<hr>
+
+<strong>æœ¬æ–‡è½¬è‡ª<a href="https://www.epochtimes.com">å¤§çºªå…ƒ</a>ï¼ˆå›½å†…éœ€ç”¨<a href="https://github.com/oqfyre3945/www/blob/master/README.md#8">ç¿»å¢™è½¯ä»¶</a>æ‰èƒ½è®¿é—®ï¼‰</strong><p>ä¸‹è½½<a href="https://github.com/oqfyre3945/www/blob/master/README.md#8">ç¿»å¢™è½¯ä»¶</a>æµè§ˆåŽŸæ–‡ï¼š<a href="https://www.epochtimes.com/gb/19/6/24/n11342010.htm">å­ç³åº”é‚€æ‹…ä»»è¯„å®¡ æœ€çˆ±å°æ¹¾å¤œå¸‚ã€åƒç«é”…</a></p><hr>
+
+<strong>æ‰‹æœºä¸Šé•¿æŒ‰å¹¶å¤åˆ¶ä¸‹é¢äºŒç»´ç åˆ†äº«æœ¬æ–‡ç« ï¼š</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/oqfyre3945/djy/blob/master/gb/19/6/24/n11342010.md%231" title="åˆ†äº«æœ¬æ–‡ç« "></td><td VALIGN=TOP><a href="https://github.com/oqfyre3945/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqfyre3945/djy/master/gb/300/wei-f1.jpg" title="ä¸­å…±çš„ä¼ªç«éª—å±€"  alt="ä¸­å…±çš„ä¼ªç«éª—å±€"></a><br><a href="https://github.com/oqfyre3945/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/oqfyre3945/djy/master/gb/300/yong-h.jpg" title="æ°¸æ’çš„è§è¯"  alt="æ°¸æ’çš„è§è¯"></a><br><a href="https://github.com/oqfyre3945/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqfyre3945/djy/master/gb/300/shang-lnz.jpg" title="å–„è‰¯å¥³å­è¢«ä¸­å…±æŠ•ç”·ç‰¢"  alt="å–„è‰¯å¥³å­è¢«ä¸­å…±æŠ•ç”·ç‰¢"></a><br><a href="https://github.com/oqfyre3945/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqfyre3945/djy/master/gb/300/huo-z3.jpg" title="è­¦å«ç›®å‡»æ´»æ‘˜å™¨å®˜"  alt="è­¦å«ç›®å‡»æ´»æ‘˜å™¨å®˜"></a><br><a href="https://github.com/oqfyre3945/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqfyre3945/djy/master/gb/300/huo-z4.jpg" title="è¯äººæè¿°æ´»æ‘˜ææ€–"  alt="è¯äººæè¿°æ´»æ‘˜ææ€–"></a><br><a href="https://github.com/oqfyre3945/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqfyre3945/djy/master/gb/300/huo-z1.jpg" title="æ­å¼€æ´»æ‘˜å™¨å®˜é»‘å¹•"  alt="æ­å¼€æ´»æ‘˜å™¨å®˜é»‘å¹•"></a><br><a href="https://github.com/oqfyre3945/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqfyre3945/djy/master/gb/300/ma-ks.jpg" title="é©¬å…‹æ€çš„æˆé­”ä¹‹è·¯"  alt="é©¬å…‹æ€çš„æˆé­”ä¹‹è·¯"></a><br><a href="https://github.com/oqfyre3945/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqfyre3945/djy/master/gb/300/chang-zs.jpg" title="è—å­—çŸ³ è•´å¤©æœº"  alt="è—å­—çŸ³ è•´å¤©æœº"></a><br><a href="https://github.com/oqfyre3945/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqfyre3945/djy/master/gb/300/st1.jpg" title="å…³æ³¨ä¸‰äº¿äººä¸‰é€€"  alt="å…³æ³¨ä¸‰äº¿äººä¸‰é€€"></a><br><a href="https://github.com/oqfyre3945/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqfyre3945/djy/master/gb/300/jie-t.jpg" title="è§£ä½“ä¸­å…±å¤å…´ä¸­åŽ"  alt="è§£ä½“ä¸­å…±å¤å…´ä¸­åŽ"></a><br><a href="https://github.com/oqfyre3945/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqfyre3945/djy/master/gb/300/gao-zs.jpg" title="ä¸­å…±è¿«å®³è‰¯å¿ƒå¾‹å¸ˆ"  alt="ä¸­å…±è¿«å®³è‰¯å¿ƒå¾‹å¸ˆ"></a><br><a href="https://github.com/oqfyre3945/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqfyre3945/djy/master/gb/300/sj1.jpg" title="ä¸‰ç™¾å¤šä¸‡äººä¸¾æŠ¥æ±Ÿæ³½æ°‘"  alt="ä¸‰ç™¾å¤šä¸‡äººä¸¾æŠ¥æ±Ÿæ³½æ°‘"></a><br><a href="https://github.com/oqfyre3945/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqfyre3945/djy/master/gb/300/sj2.jpg" title="è¿™äº›å®˜å‘˜ä¸ºä½•èµ·è¯‰æ±Ÿæ³½æ°‘"  alt="è¿™äº›å®˜å‘˜ä¸ºä½•èµ·è¯‰æ±Ÿæ³½æ°‘"></a><br><a href="https://github.com/oqfyre3945/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqfyre3945/djy/master/gb/300/liangan.jpg" title="æµ·å³¡ä¸¤å²¸çš„å¼ºçƒˆå¯¹æ¯”"  alt="æµ·å³¡ä¸¤å²¸çš„å¼ºçƒˆå¯¹æ¯”"></a><br><a href="https://github.com/oqfyre3945/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqfyre3945/djy/master/gb/300/jia-ndzl.jpg" title="åŠ æ‹¿å¤§æ€»ç†çš„è´ºä¿¡"  alt="åŠ æ‹¿å¤§æ€»ç†çš„è´ºä¿¡"></a><br><a href="https://github.com/oqfyre3945/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqfyre3945/djy/master/gb/300/xiao-wd.jpg" title="æŽ¢å¯»çœŸç›¸å…¼å¬åˆ™æ˜Ž"  alt="æŽ¢å¯»çœŸç›¸å…¼å¬åˆ™æ˜Ž"></a><br><a href="https://github.com/oqfyre3945/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqfyre3945/djy/master/gb/300/yindu.jpg" title="å°åº¦åª’ä½“æŠ¥é“ä¸œæ–¹"  alt="å°åº¦åª’ä½“æŠ¥é“ä¸œæ–¹"></a><br><a href="https://github.com/oqfyre3945/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqfyre3945/djy/master/gb/300/xie-j.jpg" title="ä¸ä¸€æ ·çš„æµ·å¤–æ ¡å›­"  alt="ä¸ä¸€æ ·çš„æµ·å¤–æ ¡å›­"></a><br><a href="https://github.com/oqfyre3945/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqfyre3945/djy/master/gb/300/li-up.jpg" title="ä»Žå¤§å¸ˆåˆ°å¾’å¼Ÿçš„ä¼ å¥‡"  alt="ä»Žå¤§å¸ˆåˆ°å¾’å¼Ÿçš„ä¼ å¥‡"></a><br><a href="https://github.com/oqfyre3945/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqfyre3945/djy/master/gb/300/zfl2.jpg" title="äº¿ä¸‡äººä¸Žä¸œæ–¹ä¸€æœ¬å¥‡ä¹¦"  alt="äº¿ä¸‡äººä¸Žä¸œæ–¹ä¸€æœ¬å¥‡ä¹¦"></a><br><a href="https://github.com/oqfyre3945/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqfyre3945/djy/master/gb/300/zhen-h.jpg" title="å¤§é™†è§ä¸åˆ°çš„éœ‡æ’¼åœºé¢"  alt="å¤§é™†è§ä¸åˆ°çš„éœ‡æ’¼åœºé¢"></a><br><a href="https://github.com/oqfyre3945/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqfyre3945/djy/master/gb/300/dalu-sk.jpg" title="äººå¿ƒå‘å–„ å¤§é™†å½“åˆç››å†µ"  alt="äººå¿ƒå‘å–„ å¤§é™†å½“åˆç››å†µ"></a><br><a href="https://github.com/oqfyre3945/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqfyre3945/djy/master/gb/300/zfl1.jpg" title="è¿½å¯»çœŸç† è¿™ä¹¦è®²ä»€ä¹ˆ"  alt="è¿½å¯»çœŸç† è¿™ä¹¦è®²ä»€ä¹ˆ"></a><br><a href="https://github.com/oqfyre3945/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqfyre3945/djy/master/gb/300/fq1.jpg" title="ä¸‹è½½å…è´¹ç¿»å¢™è½¯ä»¶"  alt="ä¸‹è½½å…è´¹ç¿»å¢™è½¯ä»¶"></a><br></td></tr></table>
